tests/NormalTests/paczka1/fuzzy1/45038102.err
Error in line 15: 8ZLH6AukZ3 S962 51,0
Error in line 16: 8ZLH6AukZ3 A394 39,9
Error in line 2: ca6z S865 15,9
Error in line 21: Be9EOk S865 19,8
Error in line 29: oME8OuVN3tN S865 62,0
Error in line 37: S944 S944 44,8
